syntax = "proto3";

package stocklet.order.v1;

import "buf/validate/validate.proto";

option go_package = "github.com/hexolan/stocklet/internal/pkg/protogen/order/v1;order_v1";

// todo: work on models
// todo: event schemas
enum OrderStatus {
  ORDER_STATUS_UNSPECIFIED = 0;
  ORDER_STATUS_PENDING = 1;
  ORDER_STATUS_REJECTED = 2;
  ORDER_STATUS_CANCELLED = 3;
  ORDER_STATUS_APPROVED = 4;
  ORDER_STATUS_SUCCESS = 5;
}

message Order {
  string id = 1;
  OrderStatus status = 2;

  // Items mapped by quantity
  map<string, int32> items = 3 [(buf.validate.field).map.values.int32.gt = 0];

  string customer_id = 4;
  string transaction_id = 5;

  int64 created_at = 6;
}
