syntax = "proto3";

package stocklet.order.v1;
option go_package = "github.com/hexolan/stocklet/internal/pkg/protogen/order/v1;order_v1";

// todo: work on models
// todo: event schemas
enum OrderStatus {
    PENDING = 0;
    CANCELLED = 1;
    REJECTED = 2;
    APPROVED = 3;
}

message Order {
    string id = 1;
    OrderStatus status = 2;
    string customer_id = 3;
    repeated OrderItem items = 4;
}

message OrderItem {
    string product_id = 1;
    int32 quantity = 2;
}